tests/NormalTests/paczka1/fuzzy1/60216801.err
Error in line 2: DTMnb S522 83,4
Error in line 8: S85 S952 -1,4
Error in line 1: S85 S952 55,2
Error in line 10: tK67pTW3 S952 130,7
Error in line 25: SFwz60oL9rE S95I 55,3
Error in line 28: tK67pTW3 S85 1$,$
Error in line 30: SFwz60oL9rE S522 52,9
